(@bug W-3655681@) long GC pauses in bookie